--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title></title>
+    <title>Tango Application</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -48,20 +48,20 @@
             <div class="row form-area">
                 <div class="col-md-7">
                     <div class="login-form">
-                        <form action="login.do" id="loginForm">
+                        <form action="" id="loginForm">
                             <div class="row">
                                 <input type="text" placeholder="Username" id="username" class="form-elem col-md-6" />
                                 <span class="err-msg col-md-6">*Required field</span>
                             </div>
                             <div class="pwd-field row">
-                                <input type="text" placeholder="Password" id="password" class="form-elem col-md-6"></input>
-                                <a href="#" id="frgt-pwd" class="form-anchor">Forgot password?</a>
+                                <input type="text" placeholder="Password" id="password" class="form-elem col-md-6"/>
                                 <span class="err-msg col-md-6">*Required field</span>
+                                <a href="#" id="frgt-pwd" class="form-anchor">Forgot password?</a>
                             </div>
                             <div class="row">
                                 <div class="col-md-6 form-submit-holder">
-                                    <input id="rememberme" name="rememberme" value="remember" type="checkbox" /> &nbsp;Remember me</label>
-                                    <input type="submit" class="submit-btn disabled" id="login" value="Login" disabled/>
+                                    <input id="rememberme" name="rememberme" value="remember" type="checkbox" /><label>&nbsp;Remember me</label>
+                                    <input type="submit" class="submit-btn" id="login-btn" value="Login" disabled/>
                                 </div>
                             </div>
                         </form>
@@ -75,7 +75,7 @@
                                 <span class="err-msg col-md-6">*Required field</span>
                             </div>
                             <div class="row">
-                                <input type="text" placeholder="Password" id="password" class="form-elem col-md-6"></input>
+                                <input type="text" placeholder="Password" id="password" class="form-elem col-md-6"/>
                                 <span class="err-msg col-md-6">*Required field</span>
                             </div>
                             <div class="row">
@@ -113,7 +113,9 @@
             <div class="row video-area">
                 <div class="vid-image col-md-12">
                     <img src="img/vidimage.jpg" alt="Video" class="img-responsive">
-                    <div id="play-btn" data-url=""></div>
+                    <div>
+                        <a href="#" data-imgpath="img/vidimage.jpg" data-type="image" id="play-btn"></a>
+                    </div>
                 </div>
             </div>
         </section>
