--- a/index.html
+++ b/index.html
@@ -101,8 +101,13 @@
                     </div>
                 </div>
                 <div class="col-md-5 social-login">
-                    <a href="#" class="social facebook">Login With Facebook</a>
-                    <a href="#" class="social twitter">Login With Twitter</a>
+                    <div class="social-holder">
+                        <a href="#" class="social facebook">Login With Facebook</a>
+                    </div> 
+                    <span id="or-text">or</span>
+                    <div class="social-holder">
+                        <a href="#" class="social twitter">Login With Twitter</a>
+                    </div>
                 </div>
             </div>
         </section>
